<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".presentation.LevelSelectorFragment">


    <TextView
        android:id="@+id/tv_select_level__f_level_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/f_level_selector_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_test__f_level_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_level_selector__test"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_easy__f_level_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00C853"
        android:text="@string/f_level_selector__easy"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_medium__f_level_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFB700"
        android:text="@string/f_level_selector__medium"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_hard__f_level_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF6D00"
        android:text="@string/f_level_selector__hard"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>